--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <br>
               <br>
     <img width="210"
-                     src="wzc.jpeg" 
+                     src="WechatIMG196.jpg" 
                      alt="Zhicheng Wang">
         </td>
             </tr> 
