--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <td width="100%" valign="top">
     <p>
     <b><a href="https://openaccess.thecvf.com/content_cvpr_2018/papers/Chen_Cascaded_Pyramid_Network_CVPR_2018_paper.pdf">Cascaded Pyramid Network for Multi-Person Pose Estimation</a></b>
-    <br><strong>Yilun Chen* <strong>Zhicheng Wang*</strong> Yuxiang Peng, Zhiqiang Zhang, Gang Yu, Jian Sun<br>
+    <br>Yilun Chen* <strong>Zhicheng Wang*</strong> Yuxiang Peng, Zhiqiang Zhang, Gang Yu, Jian Sun<br>
     <i>CVPR</i>, 2018, * indicates equal contribution<br>                   
     </p>
     </td>
@@ -148,7 +148,7 @@
     <p>
     <b><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_High-Order_Information_Matters_Learning_Relation_and_Topology_for_Occluded_Person_CVPR_2020_paper.pdf">High-Order Information Matters: Learning Relation and Topology
 for Occluded Person Re-Identification</a></b>
-    <br><strong>Guan’an Wang*, Shuo Yang*, Huanyu Liu, <strong>Zhicheng Wang</strong>, Yang Yang, Shuliang Wang, Gang Yu, Erjin Zhou, Jian Sun<br>
+    <br>Guan’an Wang*, Shuo Yang*, Huanyu Liu, <strong>Zhicheng Wang</strong>, Yang Yang, Shuliang Wang, Gang Yu, Erjin Zhou, Jian Sun<br>
     <i>CVPR</i>, 2020<br>                   
     </p>
     </td>
@@ -159,7 +159,7 @@ for Occluded Person Re-Identification</a></b>
     <td width="100%" valign="top">
     <p>
     <b><a href="https://arxiv.org/abs/2003.04030">Learning Delicate Local Representations for Multi-Person Pose Estimation</a></b>
-    <br><strong>Yuanhao Cai*, <strong>Zhicheng Wang*</strong>, Zhengxiong Luo, Binyi Yin, Angang Du, Haoqian Wang, Xiangyu Zhang, Xinyu Zhou, Erjin Zhou, Jian Sun<br>
+    <br>Yuanhao Cai*, <strong>Zhicheng Wang*</strong>, Zhengxiong Luo, Binyi Yin, Angang Du, Haoqian Wang, Xiangyu Zhang, Xinyu Zhou, Erjin Zhou, Jian Sun<br>
     <i>ECCV</i>, 2020 (Spotlight), * indicates equal contribution<br>                   
     </p>
     </td>
@@ -172,7 +172,7 @@ for Occluded Person Re-Identification</a></b>
     <td width="100%" valign="top">
     <p>
     <b><a href="https://link.springer.com/chapter/10.1007/978-3-319-48890-5_39">Object Detection Based on Scene Understanding and Enhanced Proposals</a></b>
-    <br><strong><strong>Zhicheng Wang</strong>, Chun Yuan<br>
+    <br><strong>Zhicheng Wang</strong>, Chun Yuan<br>
     <i>PCM</i>, 2016<br>                   
     </p>
     </td>
