--- a/index.html
+++ b/index.html
@@ -55,12 +55,18 @@
               <td width="67%" valign="middle">
     <p align="center"><font size="6">Zhicheng Wang (王志成)</font></p>
     <p align="justify">
-                    I am a Researcher at <a href="https://www.megvii.com/">MEGVII Inc.</a>. My research interests focus on the computer vision and artificical intelligence, specifically on the topic of object detection, segmentation, human keypoint, human action recognition, and 3D reconstruction. I obtained PhD from <a href="http://www.ntu.edu.sg/Pages/home.aspx">NTU</a> in 2014 supervised by Prof. <a target="_blank" href="https://www.cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>. Before joining Tencent, I worked as a research leader for five years in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the supervision of Dr. <a href="http://www.jiansun.org/">Sun Jian</a>.
+                    I am a Researcher at <a href="https://www.megvii.com/">MEGVII Inc.</a>. /
+                    My research interests focus on the computer vision and artificical intelligence, / 
+                    specifically on the topic of keypoint detection, segmentation, object keypoint, /
+                    human action recognition, and person re-identification. I obtained Master from /
+                    Thsinghua University</a> in 2017, supervised /
+                    by Prof. Chun Yuan</a>. In Megvii, I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the /
+                    supervision of Erjin Zhou and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by /
+                    <a href="http://www.skicyyu.org/">Gang Yu</a>.
         <br/> <br/>
     </p>
     <p align=center>
-      <a target="_blank" href="https://scholar.google.com/citations?user=0QBBNGoAAAAJ&hl=EN">Google Scholar</a> /
-                  <a target="_blank" href="CV.pdf">CV</a>
+      <a target="_blank" href="https://scholar.google.com/citations?user=0QBBNGoAAAAJ&hl=EN">Google Scholar</a>
     </p>
               </td>
               <td width="20%">
@@ -78,16 +84,16 @@
               <td width="100%" align="left">
                 <font size="5">News</font> <!-- <font size="3">(for full publications, please see google scholars)</font> -->
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://wider-challenge.org/2019.html">Wider Pedestrian Detection</a></strong> Champion in the <a  target="_blank" href="https://wider-challenge.org/2019.html">Wider Face and Person Callenge</a>.</a>(ICCV 2019).
+                  We obtained the first place of <strong><a target="_blank" href="https://wider-challenge.org/2019.html">Wider Pedestrian Detection</a></strong>, Champion in the <a  target="_blank" href="https://wider-challenge.org/2019.html">Wider Face and Person Callenge</a>.</a>(ICCV 2019).
                 </p> 
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/panoptic_2019_reports/megvii_coco2019Panoptic-TechReport.pdf">COCO Panoptic Segmentation</a></strong> Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
+                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/panoptic_2019_reports/megvii_coco2019Panoptic-TechReport.pdf">COCO Panoptic Segmentation</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
                 </p> 
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/keypoints_2019_reports/Megvii.pdf">COCO Keypoint Detection</a></strong> Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
+                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/keypoints_2019_reports/Megvii.pdf">COCO Keypoint Detection</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
                 </p>  
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/#keypoints-leaderboard">COCO Keypoint Detection</a></strong> Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ECCV 2018).
+                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/#keypoints-leaderboard">COCO Keypoint Detection</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ECCV 2018).
                  </p>  
                  <p>
                   We obtained the first place of <strong><a target="_blank" href="http://presentations.cocodataset.org/COCO17-Keypoints-Megvii.pdf">COCO Keypoint Detection</a></strong> in the <a  target="_blank" href="https://places-coco2017.github.io/">COCO + Places Challenges</a> (ICCV 2017).
@@ -160,7 +166,7 @@ for Occluded Person Re-Identification</a></b>
     <p>
     <b><a href="https://arxiv.org/abs/2003.04030">Learning Delicate Local Representations for Multi-Person Pose Estimation</a></b>
     <br>Yuanhao Cai*, <strong>Zhicheng Wang*</strong>, Zhengxiong Luo, Binyi Yin, Angang Du, Haoqian Wang, Xiangyu Zhang, Xinyu Zhou, Erjin Zhou, Jian Sun<br>
-    <i>ECCV</i>, 2020 (Spotlight), * indicates equal contribution<br>                   
+    <i>ECCV</i>, 2020 (<strong>Spotlight</strong>), * indicates equal contribution<br>                   
     </p>
     </td>
     </tr>
@@ -173,7 +179,7 @@ for Occluded Person Re-Identification</a></b>
     <p>
     <b><a href="https://link.springer.com/chapter/10.1007/978-3-319-48890-5_39">Object Detection Based on Scene Understanding and Enhanced Proposals</a></b>
     <br><strong>Zhicheng Wang</strong>, Chun Yuan<br>
-    <i>PCM</i>, 2016<br>                   
+    <i>PCM</i>, 2016 (<strong>Oral</strong>)<br>                   
     </p>
     </td>
     </tr>
