--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
               <td width="67%" valign="middle">
     <p align="center"><font size="6">Zhicheng Wang (王志成)</font></p>
     <p align="justify">
-                    I am a Researcher at <a href="https://www.megvii.com/">MEGVII Inc.</a>. /
-                    My research interests focus on the computer vision and artificical intelligence, / 
-                    specifically on the topic of keypoint detection, segmentation, object keypoint, /
-                    human action recognition, and person re-identification. I obtained Master from /
-                    Thsinghua University</a> in 2017, supervised /
-                    by Prof. Chun Yuan</a>. In Megvii, I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the /
-                    supervision of Erjin Zhou and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by /
+                    I am a Researcher at <a href="https://www.megvii.com/">MEGVII Inc.</a>
+                    My research interests focus on the computer vision and artificical intelligence,
+                    specifically on the topic of keypoint detection, segmentation, object detection,
+                    person re-identification, and human action recognition. I obtained Master Degree from
+                    Thsinghua University</a> in 2017, supervised
+                    by Prof. Chun Yuan</a>. In Megvii, I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the
+                    supervision of Erjin Zhou and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by
                     <a href="http://www.skicyyu.org/">Gang Yu</a>.
         <br/> <br/>
     </p>
