--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     specifically on the topic of keypoint detection, segmentation, object detection,
                     person re-identification, and human action recognition. I obtained Master Degree from
                     Thsinghua University</a> in 2017, supervised
-                    by Prof. Chun Yuan</a>. In Megvii, I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the
-                    supervision of Erjin Zhou and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by
+                    by Prof. Chun Yuan</a>. I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the
+                    supervision of <a href="https://scholar.google.com/citations?user=k2ziPUsAAAAJ&hl=en">Erjin Zhou</a> and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by
                     <a href="http://www.skicyyu.org/">Gang Yu</a>.
         <br/> <br/>
     </p>
