--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ for Occluded Person Re-Identification</a></b>
 <tr>
     <td width="100%" align="left">
     <p>
-    Team member: <a target='_blank' href='https://pcsci.github.io'>Chao Peng (彭超)</a>, <a target='_blank' href='http://www.zemingli.com/'>Zeming Li (黎泽明)</a>, <a target='_blank' href='http://changqianyu.me/'>Changqian Yu (余昌黔)</a>, <a target='_blank' href='https://www.sshao.com/'>Shuai Shao (邵帅)</a>  
+    Links: <a target='_blank' href='http://www.skicyyu.org/'>Chao Peng (俞刚)</a>, <a target='_blank' href='https://pcsci.github.io'>Chao Peng (彭超)</a>, <a target='_blank' href='http://www.zemingli.com/'>Zeming Li (黎泽明)</a>, <a target='_blank' href='http://changqianyu.me/'>Changqian Yu (余昌黔)</a>, <a target='_blank' href='https://www.sshao.com/'>Shuai Shao (邵帅)</a>, <a target='_blank' href='http://www.jiansun.org/'>Jian Sun (孙剑)</a>  
     </p>
     </td>
     </tr>
