--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         </td>
             </tr> 
           </table>
+
 <HR>
 <br>
 <table width="100%" align="left" border="0" cellspacing="0" cellpadding="5">
@@ -203,5 +204,11 @@ for Occluded Person Re-Identification</a></b>
     </td>
     </tr>
     </table>
- 
+
+ 		<footer>
+			<a href="https://www.easycounter.com/" target="_blank">
+			<img src="https://www.easycounter.com/counter.php?mikejay0516" border="0" alt="Web Site Hit Counter"></a>&nbsp; Unique Visitors
+			<br/>
+			Last Update: 2020.09.04
+		</footer>
   
