--- a/index.html
+++ b/index.html
@@ -205,10 +205,9 @@ for Occluded Person Re-Identification</a></b>
     </tr>
     </table>
 
- 		<footer>
-			<a href="https://www.easycounter.com/" target="_blank">
-			<img src="https://www.easycounter.com/counter.php?mikejay0516" border="0" alt="Web Site Hit Counter"></a>&nbsp; Unique Visitors
-			<br/>
-			Last Update: 2020.09.04
-		</footer>
+<footer>
+	<a href="https://www.easycounter.com/">
+        <img src="https://www.easycounter.com/counter.php?chggo" border="0" alt="Free Web Counter"></a> <br><a href="https://www.easycounter.com/">Hit Counters</a>
+	Last Update: 2020.09.04
+</footer>
   
