--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@ for Occluded Person Re-Identification</a></b>
     </tr>
     </table>
 
-<footer>
+<footer align="center">
 	<a href="https://www.easycounter.com/">
-        <img src="https://www.easycounter.com/counter.php?chggo" border="0" alt="Free Web Counter"></a> <br><a href="https://www.easycounter.com/">Hit Counters</a>
+        <img src="https://www.easycounter.com/counter.php?chggo" border="0" alt="Free Web Counter"></a> Unique visitors<br>
 	Last Update: 2020.09.04
 </footer>
   
