--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     person re-identification. I am now a researcher in <a href="https://www.megvii.com/en/">Megvii (Face++)</a> under the
                     supervision of <a href="https://scholar.google.com/citations?user=k2ziPUsAAAAJ&hl=en">Erjin Zhou</a> and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by
                     <a href="http://www.skicyyu.org/">Gang Yu</a>.
-        <br/> <br/>
+        <br/>
+	    <strong>Email</strong>: wangzhicheng@megvii.com <br/>
     </p>
     <p align=center>
       <a target="_blank" href="https://scholar.google.com/citations?user=0QBBNGoAAAAJ&hl=EN">Google Scholar</a>
