--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ for Occluded Person Re-Identification</a></b>
     <p>
     <b><a href="https://arxiv.org/abs/2003.04030">Learning Delicate Local Representations for Multi-Person Pose Estimation</a></b>
     <br>Yuanhao Cai*, <strong>Zhicheng Wang*</strong>, Zhengxiong Luo, Binyi Yin, Angang Du, Haoqian Wang, Xiangyu Zhang, Xinyu Zhou, Erjin Zhou, Jian Sun<br>
-    <i>ECCV</i> (<strong>Spotlight</strong>), 2020 , * indicates equal contribution<br>                   
+    <i>ECCV (<strong>Spotlight</strong>)</i>, 2020 , * indicates equal contribution<br>                   
     </p>
     </td>
     </tr>
@@ -179,7 +179,7 @@ for Occluded Person Re-Identification</a></b>
     <p>
     <b><a href="https://link.springer.com/chapter/10.1007/978-3-319-48890-5_39">Object Detection Based on Scene Understanding and Enhanced Proposals</a></b>
     <br><strong>Zhicheng Wang</strong>, Chun Yuan<br>
-    <i>PCM</i> (<strong>Oral</strong>), 2016 <br>                   
+    <i>PCM (<strong>Oral</strong>)</i>, 2016 <br>                   
     </p>
     </td>
     </tr>
