--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     supervision of <a href="https://scholar.google.com/citations?user=k2ziPUsAAAAJ&hl=en">Erjin Zhou</a> and Dr. <a href="http://www.jiansun.org/">Sun Jian</a>, and used to be supervised by
                     <a href="http://www.skicyyu.org/">Gang Yu</a>.
         <br/>
-	    <strong>Email</strong>:<a href="mailto:megvii.com">wangzhicheng@megvii.com</a><br/>
+	    <strong>Email</strong>:<a href="mailto:wangzhicheng@megvii.com">wangzhicheng@megvii.com</a><br/>
     </p>
     <p align=center>
       <a target="_blank" href="https://scholar.google.com/citations?user=0QBBNGoAAAAJ&hl=EN">Google Scholar</a>
