--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <br>
               <br>
               <img width="210"
-                     src="WechatIMG196.jpg" 
+                     src="pics/WechatIMG196.jpg" 
                      alt="Zhicheng Wang">
              </td>
               <td width="67%" valign="middle">
@@ -88,10 +88,14 @@
                   We obtained the first place of <strong><a target="_blank" href="https://wider-challenge.org/2019.html">Wider Pedestrian Detection</a></strong>, Champion in the <a  target="_blank" href="https://wider-challenge.org/2019.html">Wider Face and Person Callenge</a>.</a>(ICCV 2019).
                 </p> 
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/panoptic_2019_reports/megvii_coco2019Panoptic-TechReport.pdf">COCO Panoptic Segmentation</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
+                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/panoptic_2019_reports/megvii_coco2019Panoptic-TechReport.pdf">COCO Panoptic Segmentation</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2019.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
                 </p> 
                 <p>
-                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/keypoints_2019_reports/Megvii.pdf">COCO Keypoint Detection</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
+                  We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/files/keypoints_2019_reports/Megvii.pdf">COCO Keypoint Detection</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2019.html">COCO + Mapillary Joint Challenge</a>. </a>(ICCV 2019).
+               <img width="210"
+                     src="pics/WechatIMG6.jpg" 
+                     alt="Zhicheng Wang">
+
                 </p>  
                 <p>
                   We obtained the first place of <strong><a target="_blank" href="https://cocodataset.org/#keypoints-leaderboard">COCO Keypoint Detection</a></strong>, Champion in the <a  target="_blank" href="http://cocodataset.org/workshop/coco-mapillary-eccv-2018.html">COCO + Mapillary Joint Challenge</a>. </a>(ECCV 2018).
