--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ for Occluded Person Re-Identification</a></b>
 <tr>
     <td width="100%" align="left">
     <p>
-    Links: <a target='_blank' href='http://www.skicyyu.org/'>Chao Peng (俞刚)</a>, <a target='_blank' href='http://www.jiansun.org/'>Jian Sun (孙剑)</a>  
+    Links: <a target='_blank' href='http://www.skicyyu.org/'>Gang Yu (俞刚)</a>, <a target='_blank' href='http://www.jiansun.org/'>Jian Sun (孙剑)</a>  
     </p>
     </td>
     </tr>
