--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ for Occluded Person Re-Identification</a></b>
     </tr>
     </table>
 
-<footer align="center">
+<footer align="center" hidden>
 	<a href="https://www.easycounter.com/">
         <img src="https://www.easycounter.com/counter.php?chggo" border="0" alt="Free Web Counter"></a> Unique visitors<br>
 	Last Update: 2020.09.04
